deps/crates/vendor/anyhow/tests/ui/empty-ensure.rs
use anyhow::{ensure, Result};

fn main() -> Result<()> {
    ensure!();
    Ok(())
}
